--- a/index.html
+++ b/index.html
@@ -55,82 +55,92 @@
       <div class="form-block w-form">
         Train Name</label><input type="text" id="trainName" data-name="Name" maxlength="256" value="" class="train_info_form_textbox w-input">
         Destination</label><input type="text" id="trainDestination" name="name-4" data-name="Name 4" maxlength="256" value="" class="train_info_form_textbox w-input">
-        First Train Time minutes</label><input type="text" id="firstTrainTimeMinutes" name="name-3" data-name="Name 3" maxlength="256" value="" class="train_info_form_textbox w-input">
-        First Train Time hours</label><input type="text" id="firstTrainTimeHours" name="name-3" data-name="Name 3" maxlength="256" value="" class="train_info_form_textbox w-input">
-        Frequency (min)</label><input type="text" id="trainFrequency" name="name-2" data-name="Name 2" maxlength="256" value="" class="train_info_form_textbox w-input">
-        <button onclick="addTrainInfo()">Submit</button></form>
+        First Train Time</label><input type="text" id="firstTrainTime" name="name-3" data-name="Name 3" maxlength="256" value="" class="train_info_form_textbox w-input">
+        Frequency (min)</label><input type="text" id="frequency" name="name-2" data-name="Name 2" maxlength="256" value="" class="train_info_form_textbox w-input">
+        <button onclick="pushTrainInfo()">Submit</button></form>
       </div>
     </div>
   </div>
-  <script src="js/webflow.js" type="text/javascript"></script>
+  <!-- <script src="js/webflow.js" type="text/javascript"></script> -->
+  <script src="https://www.gstatic.com/firebasejs/5.11.0/firebase.js"></script>
+  <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
   <script>
-    $(document).ready(function() {
-
-  var config = {
-    apiKey: "",
-    authDomain: "",
-    databaseURL: "",
-    projectId: "",
-    storageBucket: "",
-  };
-  firebase.initializeApp(config);
-});
-
-  function addTrainInfo() {
-    var trainName = document.getElementById("trainName").value;
-    var trainDestination = document.getElementById('trainDestination').value;
-    var firstTrainTimeMinutes = document.getElementById("firstTrainTimeMinutes").value;
-    var firstTrainTimeHours = document.getElementById("firstTrainTimeHours").value;
-    var trainFrequency = document.getElementById("trainFrequency").value;
-
-    var today = new Date();
-    var currentHours = today.getHours();
-    var currentMin = today.getMinutes();
-    var trainNextArival = function() {
-      var addonminutes =  (currentMin + firstTrainTimeMinutes) % 60;
-      var addonhours = (currentHours + firstTrainTimeHours) % 24;
-      var arival = [];
-      if (currentMin + firstTrainTimeMinutes > 60) {
-        addonhours = addonhours + Math.trunc(trainFrequency / 60);
-        arial.push(addonminutes);
-      }
-      if (currentHours + firstTrainTimeHours > 24) {
-        arrival.push(addonhours);
-      }
-      else {
-        arival.push(addonhours);
-      }
-      return arival;
+    var trainInfo = {
+      name : "N/A",
+      destination : "N/A",
+      frequency : 0,
+      nextTime : "N/A",
+      minAway : 0
     }
-    var minutesAway = function() {
 
+    var config = {
+      apiKey: "AIzaSyCFV0SfGHlnXBr1_N012QieqlWrL3jTJQM",
+      authDomain: "train-terminal-database.firebaseapp.com",
+      databaseURL: "https://train-terminal-database.firebaseio.com",
+      projectId: "train-terminal-database",
+      storageBucket: "train-terminal-database.appspot.com",
+      messagingSenderId: "544182429622"
+    };
+
+    firebase.initializeApp(config);
+    var trainRef = firebase.database().ref('train');
+
+    trainRef.on("child_added", function(data, prevChildKeys) {
+      var databaseRow = data.val();
+      trainInfo.name = databaseRow.name;
+      trainInfo.destination = databaseRow.destination;
+      trainInfo.frequency = databaseRow.frequency;
+      trainInfo.firstTime = databaseRow.firstTime;
+      appendInfo();
+      }, function (error) {
+        console.log("Error: " + error.code);
+      });
+
+    function timeConversion() {
+
+      var firstTime = trainInfo.firstTime;
+      var firstTimeConverted = moment(firstTime, "hh:mm").subtract(1, "years");
+      var currentTime = moment();
+      var diffTime = moment().diff(moment(firstTimeConverted), "minutes");
+      var remainder = diffTime % trainInfo.frequency;
+      var minutesTillTrain = trainInfo.frequency - remainder;
+      console.log(minutesTillTrain);
+      var nextTrain = moment().add(minutesTillTrain, "minutes");
+      nextTrain = moment(nextTrain).format("hh:mm");
+
+      trainInfo.nextTime = nextTrain;
+      trainInfo.minAway = minutesTillTrain;
     }
-    var tableRef = document.getElementById('myTable').getElementsByTagName('tbody')[document.getElementById("trainInfo").rows.length];
-    var newRow  = tableRef.insertRow(tableRef.rows.length);
-    
-    var nameCell = row.insertCell(0);
-    var destinationCell = row.insertCell(1);
-    var frequencyCell = row.insertCell(2);
-    var trainNextArivalCell = row.insertCell(3);
-    var minutesAwayCell = row.insertCell(4)
 
-    nameCell.innerHTML = trainName;
-    destinationCell.innerHTML = trainDestination;
-    frequencyCell.innerHTML = trainFrequency;
-    trainNextArivalCell.innerHTML = trainNextArival;
+    function pushTrainInfo() {
+      trainInfo.name = document.getElementById("trainName").value;
+      trainInfo.destination = document.getElementById('trainDestination').value;
+      trainInfo.frequency = document.getElementById('frequency').value;
+      trainInfo.firstTime = document.getElementById('firstTrainTime').value
+      trainRef.push({trainInfo});
+      appendInfo();
+    }
 
-  var newTrainRow = {
-      name : nameCell,
-      destination :destinationCell,
-      frequency : frequencyCell,
-      nextArival : trainNextArivalCell,
-      minutesAway : minutesAwayCell,
-  };
+    function appendInfo() {
+      timeConversion();
 
-  database.ref().on(function() {
-    datab.ref.push(newTrainRow);
-  });
-}
+      var table = document.getElementById("trainInfo");
+      var tableLength = table.rows.length;
+
+      var row = table.insertRow(tableLength);
+      var nameRow = row.insertCell(0);
+      var destinationRow = row.insertCell(1);
+      var frequencyRow = row.insertCell(2);
+      var nextArivalRow = row.insertCell(3);      
+      var timeAwayRow = row.insertCell(4);
+
+      nameRow.innerHTML = trainInfo.name;
+      destinationRow.innerHTML = trainInfo.destination;
+      frequencyRow.innerHTML = trainInfo.frequency;
+      nextArivalRow.innerHTML = trainInfo.nextTime;
+      timeAwayRow.innerHTML = trainInfo.minAway;
+      console.log("added row");
+    }
   </script>
 </body>
 </html>
